--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -48,4 +49,254 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 30px;
+  padding: 0 30px 0;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 16px;
+  width: 100%;
+  max-width: 711px;
+  max-height: 386px;
+}
+
+.result__video-container {
+  display: flex;
+  position: relative;
+  overflow: visible;
+  object-fit: cover;
+}
+
+.result__video {
+  width: 100%;
+}
+
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  gap: 35px;
+  align-items: center;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  max-width: 225px;
+  width: 100%;
+  border: 0;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 3px;
+}
+
+.search-form-city {
+    padding-top: 5px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__textfield {
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 400;
+  border: 0;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+  background-color: transparent;
+  appearance: none;
+  width: 100%;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 18px;
+}
+
+.search-form__textfield:focus-within {
+  outline: 1px solid #fff;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.search-form__pseudo-checkbox {
+  border: 1px solid #fff;
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  padding: 1px;
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 1px;
+  cursor: pointer;
+}
+
+.search-form__label:focus-within {
+  outline: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form-time {
+  padding-left: 7px;
+}
+
+.button {
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: inherit;
+    padding: 6px 73px;
+}
+
+.search-form__submit-button {
+  margin-top: 25px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
+  cursor: pointer;
+}
+
+.button:focus-within {
+  outline: 1px solid #fff;
+}
+
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 399px;
+  width: 100%;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 0.94;
+  padding-top: 32px;
+}
+
+.content__accent {
+  color: rgba(84, 80, 80, 1);
+}
+
+.content__list-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 30px;
+  overflow-y: scroll;
+  height: 298px;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 100%;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 1px;
+}
+
+.content__video-card:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__video-card:focus-within {
+  outline: 1px solid #fff;
+}
+
+.content__video-card-thumbnail {
+  min-width: 193px;
+  height: 103px;
+  object-fit: contain;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  padding-left: 3px;
+  -webkit-line-clamp: 4;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title {
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 16.2px;
 }
