--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ ol {
   align-items: center;
   width: 100%;
   gap: 30px;
+  min-width: 1140px;
   padding: 0 30px 0;
 }
 
@@ -66,19 +67,22 @@ ol {
   justify-content: start;
   gap: 16px;
   width: 100%;
-  max-width: 711px;
-  max-height: 386px;
+  padding-top: 45px;
 }
 
 .result__video-container {
   display: flex;
   position: relative;
+  max-width: 711px;
+  max-height: 386px;
   overflow: visible;
-  object-fit: cover;
 }
 
 .result__video {
+  object-fit: cover;
+  object-position: center;
   width: 100%;
+  height: 100%;
 }
 
 
@@ -92,7 +96,6 @@ ol {
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
-  max-width: 225px;
   width: 100%;
   border: 0;
 }
@@ -101,10 +104,6 @@ ol {
   font-size: 18px;
   font-weight: 400;
   padding-bottom: 3px;
-}
-
-.search-form-city {
-    padding-top: 5px;
 }
 
 .visually-hidden {
@@ -136,7 +135,7 @@ ol {
 }
 
 .search-form__textfield:focus-within {
-  outline: 1px solid #fff;
+  outline: none;
 }
 
 .search-form__checkbox-list {
@@ -153,14 +152,14 @@ ol {
   padding: 1px;
 }
 
-.search-form__label:hover {
+.search-form__label-text:hover {
   text-decoration: underline;
   text-underline-offset: 4px;
   text-decoration-thickness: 1px;
   cursor: pointer;
 }
 
-.search-form__label:focus-within {
+.search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
 }
 
@@ -177,10 +176,6 @@ ol {
   opacity: 1;
 }
 
-.search-form-time {
-  padding-left: 7px;
-}
-
 .button {
   background-color: transparent;
   border: 1px solid #fff;
@@ -188,7 +183,7 @@ ol {
   font-family: inherit;
   font-weight: 700;
   font-size: inherit;
-    padding: 6px 73px;
+  padding: 6px 73px;
 }
 
 .search-form__submit-button {
@@ -213,9 +208,10 @@ ol {
 .content__details {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 22px;
   max-width: 399px;
   width: 100%;
+  padding-bottom: 33px;
 }
 
 .title {
@@ -224,7 +220,6 @@ ol {
   font-weight: 700;
   text-transform: uppercase;
   line-height: 0.94;
-  padding-top: 32px;
 }
 
 .content__accent {
@@ -236,7 +231,7 @@ ol {
   flex-direction: column;
   position: relative;
   gap: 30px;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 298px;
 }
 
@@ -253,24 +248,28 @@ ol {
   justify-content: space-between;
 }
 
-.content__video-card:hover {
+.content__card-link_current {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__card-link:hover {
   text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-thickness: 1px;
 }
 
-.content__video-card:active {
+.content__card-link:active {
   background-color: rgba(84, 80, 80, 1);
 }
 
-.content__video-card:focus-within {
+.content__card-link:focus-within {
   outline: 1px solid #fff;
 }
 
 .content__video-card-thumbnail {
   min-width: 193px;
   height: 103px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -290,13 +289,17 @@ ol {
 }
 
 .content__video-card-title {
+  font-family: Oswald, sans-serif;
   text-overflow: ellipsis;
   text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
   font-size: 30px;
+    max-height: 196px;
 }
 
 .content__video-card-description {
   font-size: 18px;
   font-weight: 400;
-  line-height: 16.2px;
+  line-height: 10px;
 }
