--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ html {
 
 .page {
   display: flex;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -54,7 +55,7 @@ ol {
 .content {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
   width: 100%;
   gap: 30px;
   min-width: 1140px;
@@ -67,7 +68,6 @@ ol {
   justify-content: start;
   gap: 16px;
   width: 100%;
-  padding-top: 74px;
 }
 
 .result__video-container {
@@ -89,21 +89,22 @@ ol {
 .search-form {
   display: flex;
   flex-direction: row;
-  gap: 35px;
-  align-items: center;
+  justify-content: space-between;
+  align-items: start;
 }
 
 .search-form__fieldset {
   display: flex;
+  align-items: start;
   flex-direction: column;
-  width: 100%;
+  max-width: 225px;
   border: 0;
 }
 
 .search-form__fieldset-title {
   font-size: 18px;
   font-weight: 400;
-  padding-bottom: 3px;
+  padding-bottom: 5px;
 }
 
 .visually-hidden {
@@ -126,7 +127,9 @@ ol {
   color: #fff;
   background-color: transparent;
   appearance: none;
-  width: 100%;
+    min-width: 225px;
+    min-height: 27px;
+    width: 100%;
 }
 
 .search-form__textfield::placeholder {
@@ -182,6 +185,10 @@ ol {
   opacity: 1;
 }
 
+.search-form__submit-button {
+    align-self: end;
+}
+
 .button {
   background-color: transparent;
   border: 1px solid #fff;
@@ -189,11 +196,7 @@ ol {
   font-family: inherit;
   font-weight: 700;
   font-size: inherit;
-  padding: 6px 73px;
-}
-
-.search-form__submit-button {
-  margin-top: 25px;
+  padding: 5px 73px;
 }
 
 .button:hover {
@@ -218,7 +221,7 @@ ol {
 .content__details {
   display: flex;
   flex-direction: column;
-  gap: 22px;
+  gap: 20px;
   max-width: 399px;
   width: 100%;
 }
@@ -242,13 +245,16 @@ ol {
   gap: 30px;
   overflow-y: auto;
   height: 298px;
+  padding-top: 3px;
 }
 
 .content__list {
   display: flex;
   flex-direction: column;
+  max-width: 390px;
   gap: 30px;
   width: 100%;
+  padding: 1px;
 }
 
 .content__video-card {
@@ -288,7 +294,6 @@ ol {
 
 .content__video-card-description-container {
   flex-grow: 1;
-  padding-left: 3px;
   -webkit-line-clamp: 4;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -305,14 +310,16 @@ ol {
   font-family: Oswald, sans-serif;
   text-overflow: ellipsis;
   text-transform: uppercase;
+  line-height: 1;
   white-space: nowrap;
   overflow: hidden;
   font-size: 30px;
   max-width: 196px;
+  margin-bottom: 4px;
 }
 
 .content__video-card-description {
+  line-height: 0.9;
   font-size: 18px;
   font-weight: 400;
-  line-height: 10px;
 }
